--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "quer carona!",
-  "short_name": "quer carona!",
+  "name": "Quer carona!?",
+  "short_name": "Quer carona!?",
   "icons": [
     {
       "src": "icons/android-chrome-192x192.png",
