--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/jquery": "^3.5.14",
+    "axios": "^1.1.3",
     "jquery": "^3.6.1",
     "validator": "^13.7.0"
   }
