--- a/web/package.json
+++ b/web/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.0.0-beta.14",
     "@react-icons/all-files": "^4.1.0",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.2",
+    "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "leaflet": "^1.9.3",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.7.0",
+    "mapbox-gl": "^2.12.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0",
+    "react-map-gl": "^7.0.21",
     "typescript": "4.9.3"
   },
   "devDependencies": {
